--- a/setup.cfg
+++ b/setup.cfg
@@ -3,11 +3,11 @@
 
 [metadata]
 # The distribution name (pip):
-name = minimalhello
+name = mftscleanup
 version = 0.0.0+dev
-author = Walker Hale
-author_email = hale@bcm.edu
-description = Minimal hello world package. Runnable with entry point and importable.
+author = Sarah Ponce
+author_email = sarah.ponce@bcm.edu
+description = mftscleanup package. Runnable with entry point and importable.
 long_description = file:README.md
 url = https://github.com/BCM-HGSC
 license = MIT
@@ -41,7 +41,7 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    hello = minimalhello.__main__:main
+    check-and-clean-dirs = mftscleanup.__main__:main
 
 [bdist_wheel]
 universal = 1
