adding auto_cleanup and register_share as console scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ packages = find:
 # Demonstration dependency
 install_requires =
     addict
+    pyyaml
 
 # You don't this if your packeges are at the top.
 [options.packages.find]
@@ -41,7 +42,8 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    check-and-clean-dirs = mftscleanup.__main__:main
+    auto-cleanup-shares = mftscleanup.__main__:auto_cleanup
+    register-new-share = mftscleanup.__main__:register_share
 
 [bdist_wheel]
 universal = 1
