--- a/src/mftscleanup/config.yaml
+++ b/src/mftscleanup/config.yaml
@@ -1,11 +1,7 @@
-'''
-Arguments for testing 
-'''
-metadata_root: /aspera/share/mfts/ # TODO
+# Arguments for testing
+metadata_root: /build/test/dummy
 email:
   from_address: SENDER@bcm.edu
   host: SMTP.SERVER.DOMAIN
-
 logging:
   level: INFO
-  ...
