--- a/src/mftscleanup/config.yaml
+++ b/src/mftscleanup/config.yaml
@@ -1,5 +1,5 @@
 # Arguments for testing
-metadata_root: /build/test/dummy
+metadata_root: build/test/dummy
 email:
   from_address: SENDER@bcm.edu
   host: SMTP.SERVER.DOMAIN
