removed unused code

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    auto-cleanup-share = mftscleanup.__main__:auto_cleanup
+    auto-cleanup-shares = mftscleanup.__main__:auto_cleanup
     register-new-share = mftscleanup.__main__:register_share
 
 [bdist_wheel]
