--- a/setup.cfg
+++ b/setup.cfg
@@ -32,10 +32,11 @@ package_dir =
     =src
 packages = find:
 # Demonstration dependency
+
 install_requires =
     addict
     pyyaml
-
+    
 # You don't this if your packeges are at the top.
 [options.packages.find]
 where = src
@@ -44,6 +45,13 @@ where = src
 console_scripts =
     auto-cleanup-shares = mftscleanup.__main__:auto_cleanup
     register-new-share = mftscleanup.__main__:register_share
+
+[options.extras_require]
+# pip install -e ".[dev]"
+dev = 
+    black
+    pylint
+    pytest
 
 [bdist_wheel]
 universal = 1
