--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ packages = find:
 
 install_requires =
     addict
+    holidays
     pyyaml
     
 # You don't this if your packeges are at the top.
