--- a/setup.cfg
+++ b/setup.cfg
@@ -44,8 +44,8 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    auto-cleanup-shares = mftscleanup.__main__:auto_cleanup
-    register-new-share = mftscleanup.__main__:register_share
+    register-new-share = mftscleanup.__main__:register_new_share
+    auto-cleanup-shares = mftscleanup.__main__:auto_cleanup_shares
 
 [options.extras_require]
 # pip install -e ".[dev]"
