--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ packages = find:
 
 install_requires =
     addict
-    holidays
+    holidays '!=0.17' # holidays requires any version that is not 0.17 due to a bug
     pyyaml
     
 # You don't this if your packeges are at the top.
