--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ classifiers =
 
 [options]
 # The package names (import):
-python_requires = >=3.10
+python_requires = ~=3.10
 # You don't need package_dir if your packeges are at the top.
 package_dir =
     =src
